fix clipped bottom

--- a/src/app.css
+++ b/src/app.css
@@ -182,18 +182,18 @@ Usage:
 */
 
 .clipped--bottom {
-	clip-path: polygon(0 0, 100% 0, 100% 60%, 0% 100%);
+	clip-path: polygon(0 0, 100% 0, 100% 93%, 0% 100%);
 }
 
 @media (min-width: 768px) {
 	.clipped--bottom {
-		clip-path: polygon(0 0, 100% 0, 100% 60%, 0% 100%);
+		clip-path: polygon(0 0, 100% 0, 100% 85%, 0% 100%);
 	}
 }
 
-@media (max-width: 550px) {
+@media (min-width: 1024px) {
 	.clipped--bottom {
-		clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%);
+		clip-path: polygon(0 0, 100% 0, 100% 75%, 0% 100%);
 	}
 }
 
@@ -204,11 +204,5 @@ Usage:
 @media (min-width: 768px) {
 	.clipped--top {
 		clip-path: polygon(0 20%, 100% 0, 100% 100%, 0% 100%);
-	}
-}
-
-@media (max-width: 550px) {
-	.clipped--top {
-		clip-path: polygon(0 5%, 100% 0, 100% 100%, 0% 100%);
 	}
 }
